# advcat

./: LICENSE  README.md  pyproject.toml  requirements.txt
advcat/: detection.py  pandoc_parse.py
